--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,4 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.user:last-child .limiter{display: none;}
